- Finished filters for librarie.net; - finished first version of the main page

--- a/client/templates/main/mainPage.html
+++ b/client/templates/main/mainPage.html
@@ -1,1 +1,7 @@
-<h1>HELLO!</h1>
+<div id="tilesContainer">
+</div>
+
+<div id="actionBar">
+    <div id="avatar"></div>
+    <div id="userName"></div>
+</div>
