--- a/client/templates/main/bookMain.html
+++ b/client/templates/main/bookMain.html
@@ -1,5 +1,5 @@
 <input type="hidden" name="currentOfferReviews">
-<div id="reviewsContainer">
+<span id="reviewsContainer">
     <table>
             <tr>
                 <td>
@@ -12,7 +12,7 @@
                 </td>
             </tr>
         </table>
-</div>
+</span>
 <div class="bookContainer">
     <table>
         <tr>
