--- a/client/templates/main/pageLayout.html
+++ b/client/templates/main/pageLayout.html
@@ -14,5 +14,7 @@
     <div class="contextualMenuSeparator"></div>
     <div class="contextOption">Iesire</div>
 </div>
+<div id="searchBarContent">
+</div>
 <div id="content">
 </div>
